--- a/Sistema/templates/layout.html
+++ b/Sistema/templates/layout.html
@@ -6,8 +6,7 @@
     <title>Pintureria App</title>
 </head>
 <body>
-    <h1>Hola</h1>
-    <h2>mundo</h2>
-    <hr>
+    {% block body %}
+    {% endblock %}
 </body>
 </html>
