--- a/Pruba_Sistema_Flask/templates/reportes.html
+++ b/Pruba_Sistema_Flask/templates/reportes.html
@@ -4,6 +4,7 @@
     <div class="container">
         <div class="navBar">
             <div class="col1" style="margin-top: 10px;">
+                <!--
                 <h2>ejemplo 1</h2>
                 <a href="{{ url_for('CargaProducto') }}">Carga de producto</a>
                 <a href="{{ url_for('Venta') }}">Venta</a>
@@ -12,14 +13,15 @@
                 <a href="{{ url_for('Productos') }}">Productos</a>
                 <a href="{{ url_for('Clientes') }}">Clientes</a>
                 <a href="{{ url_for('Proveedores') }}">Proveedores</a>
+                -->
             </div>
             <div class="col2" style="margin-bottom: 10px;">
                 <h2> </h2>
-                <a href="{{ url_for('Reportes') }}">Reportes</a>
+                <a href="{{ url_for('Index') }}">Volver</a>
             </div>
         </div>
         <div class="containerTable">
-            <h1>Pantalla Principal</h1>
+            <h1>Reportes</h1>
         </div>
     </div>
 
