--- a/Pruba_Sistema_Flask/static/style.css
+++ b/Pruba_Sistema_Flask/static/style.css
@@ -49,3 +49,50 @@ body{
     padding: 5px 0;
     text-align: center;
 }
+
+.btnEditar{
+    padding: 5px 10px;
+    border: solid 2px #2142B5;
+    border-radius: 5px;
+    color: #fff;
+    background-color: #2142B5;
+}
+.btnBorrar{
+    padding: 5px 10px;
+    border: solid 2px #DC3A51;
+    border-radius: 5px;
+    color: #fff;
+    background-color: #DC3A51;
+}
+
+
+
+
+
+/* Estilos para el popup */
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.popup-content {
+    background-color: white;
+    width: 50%;
+    margin: 10% auto;
+    padding: 20px;
+    position: relative;
+    border-radius: 5px;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 20px;
+    cursor: pointer;
+}
