--- a/Pruba_Sistema_Flask/templates/productos.html
+++ b/Pruba_Sistema_Flask/templates/productos.html
@@ -4,15 +4,16 @@
     <div class="container">
         <div class="navBar">
             <div class="col1" style="margin-top: 10px;">
+                <h2>Nuevo producto</h2>
                 <!-- Formulario de producto -->
                 <form action="/add_product" method="POST">
 
                     <input type="text" name="nombre" placeholder="Nombre">
                     <select name="tipo" id="tipo">
-                        <option value="">--seleccionar una opcion--</option>
-                        <option value="Pintura">Pintura</option>
-                        <option value="Ferreteria">Ferreteria</option>
-                        <option value="Otros">Otros</option>
+                        <option value="">Categoria</option>
+                        <option value="pintura">Pintura</option>
+                        <option value="ferreteria">Ferreteria</option>
+                        <option value="otros">Otros</option>
                     </select>
                     <input type="number" name="cantidad" placeholder="Cantidad">
                     <input type="number" name="precio" placeholder="$0.00">
@@ -35,18 +36,44 @@
         </div>
         <!-- Tabla de producto -->
         <div class="containerTable">
-            <h1>Productos</h1>
+             <!-- Filtro -->
             <form action="/filter" method="POST">
-
-                <input type="text" name="nombre" placeholder="Nombre">
                 <select name="tipo" id="tipo">
-                    <option value="">--seleccionar una opcion--</option>
+                    {% if filterDB is defined %}
+                        <option value="">{{ filterDB.1 }}</option>
+                    {% else %}
+                        <option value="">Categoria</option>
+                    {% endif %}
                     <option value="Pintura">Pintura</option>
                     <option value="Ferreteria">Ferreteria</option>
                     <option value="Otros">Otros</option>
                 </select>
-                <input type="number" name="cantidad" placeholder="Cantidad">
-                <input type="number" name="precio" placeholder="$0.00">
+                <span>Ordenar por: </span>
+                <select name="tipo_orden" id="tipo_orden">
+                    {% if filterDB is defined %}
+                        <option value="{{ filterDB.2 }}">{{ filterDB.2 }}</option>
+                    {% else %}
+                    {% endif %}
+                    <option value="cantidad">cantidad</option>
+                    <option value="precio">precio</option>
+                </select>
+                <select name="orden" id="orden">
+                    {% if filterDB is defined %}
+                        {% if filterDB.3 == "DESC" %}
+                            <option value="{{ filterDB.3 }}">Mayor</option>
+                        {% else %}
+                            <option value="{{ filterDB.3 }}">Menor</option>
+                        {% endif%}
+                    {% else %}
+                    {% endif %}
+                    <option value="ASC">Menor</option>
+                    <option value="DESC">Mayor</option>
+                </select>
+                {% if filterDB is defined %}
+                    <input type="text" name="nombre" placeholder="Nombre" value="{{ filterDB.0 }}">
+                {% else %}
+                    <input type="text" name="nombre" placeholder="Nombre">
+                {% endif %}
                 <button type="submit">Buscar</button>
             
             </form>
@@ -86,9 +113,9 @@
                             <input type="text" name="nombre" placeholder="Nombre" value="{{ editDB.1 }}">
                             <select name="tipo" id="tipo">
                                 <option value="{{ editDB.2 }}">{{ editDB.2 }}</option>
-                                <option value="Pintura">Pintura</option>
-                                <option value="Ferreteria">Ferreteria</option>
-                                <option value="Otros">Otros</option>
+                                <option value="pintura">Pintura</option>
+                                <option value="ferreteria">Ferreteria</option>
+                                <option value="otros">Otros</option>
                             </select>
                             <input type="number" name="cantidad" placeholder="Cantidad" value="{{ editDB.3 }}">
                             <input type="number" name="precio" placeholder="$0.00" value="{{ editDB.4 }}">
@@ -102,10 +129,15 @@
                 // JavaScript para mostrar y ocultar el popup
                 var popup = document.getElementById("popup");
                 var closePopupBtn = document.getElementById("closePopup");
+                var openPopupBtn = document.getElementById("openPopupDelete");
 
                 closePopupBtn.addEventListener("click", function() {
                     popup.style.display = "none";
                 });
+
+                openPopupBtn.addEventListener("click", function() {
+                    popup.style.display = "block";
+                }); //seguir con el btn delete button (abrir popup al dar click en borrar, confirmar o cancelar, confirmar llama a la accion POST)
             </script>
         </div>
     </div>
