--- a/Pruebas_pintureria_01/templates/productos/index.html
+++ b/Pruebas_pintureria_01/templates/productos/index.html
@@ -3,7 +3,7 @@
 
 <!--Css-->
 <style>
-    /* Estilo para eliminar el borde en los botones cuando están seleccionados */
+    /* Estilo para eliminar el borde en los botones cuando estan seleccionados */
     .btn:focus {
         outline: none;
         box-shadow: none;
@@ -14,7 +14,7 @@
 
     <!-- Barra superior con filtros y botones -->
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <!-- Formulario para búsqueda por nombre -->
+        <!-- Formulario para busqueda por nombre -->
         <form class="form-inline">
             <input class="form-control mr-sm-2" type="search" placeholder="Buscar por nombre" aria-label="Buscar" name="search">
             <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Buscar</button>
@@ -40,14 +40,14 @@
                     <!-- Entrada de porcentaje de descuento -->
                     <input type="number" class="form-control" id="discountPercentage" name="discountPercentage" min="-100" max="100" step="0.01" required>
                     <div class="input-group-append">
-                        <!-- Botón para aplicar el descuento -->
+                        <!-- Boton para aplicar descuento -->
                         <button type="submit" class="btn btn-warning">Aplicar</button>
                     </div>
                 </div>
             </div>
         </form>
 
-        <!-- Botón para ingresar un nuevo producto -->
+        <!-- Boton para ingresar un nuevo producto -->
         <a class="btn btn-success" href="{{ url_for('create')}}">Ingresar nuevo producto</a>
     </div>
 
@@ -60,8 +60,9 @@
                     <th>Marca</th>
                     <th>Tipo</th>
                     <th>Descripcion</th>
-                    <th>Cantidad</th>
+                    <th>Stock</th>
                     <th>Precio</th>
+                    <th>Salida</th>
                     <th>Acciones</th>
                 </tr>
             </thead>
@@ -75,12 +76,17 @@
                     <td>{{ producto[3] }}</td>
                     <td>{{ producto[4] }}</td>
                     <td>${{ producto[5] }}</td>
+                    <td>{{ producto[8] }}</td>
                     <td>
-                        <!-- Botón para editar -->
+                        <!-- Verificar cantidad minima con stock actual -->
+                        {% if producto[4] <= producto[7] %}
+                            <span class="badge badge-warning float-right">¡Stock bajo!</span>
+                        {% endif %}
+                        <!-- Boton para editar -->
                         <a class="btn btn-primary btn-sm" href="/edit/{{ producto[0] }}">Editar</a>
-                        <!-- Botón para eliminar con confirmación -->
+                        <!-- Boton para eliminar con confirmacion -->
                         <a class="btn btn-danger btn-sm" href="#" onclick="confirmDelete('{{ producto[0] }}')">Eliminar</a>
-                        <!-- Botón para agregar al carrito -->
+                        <!-- Boton para agregar al pedido -->
                         <a class="btn btn-success btn-sm" href="/add_to_cart/{{ producto[0] }}">+</a>
                     </td>
                 </tr>
@@ -97,7 +103,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
 function confirmDelete(productID) {
-    // Mostrar un cuadro de diálogo de confirmación
+    // Mostrar un cuadro de confirmación
     Swal.fire({
         title: '¿Estás seguro?',
         text: 'Esta acción no se puede deshacer',
@@ -109,7 +115,7 @@ function confirmDelete(productID) {
         cancelButtonText: 'Cancelar'
     }).then((result) => {
         if (result.isConfirmed) {
-            // Redirigir a la página de eliminación con el ID del producto
+            // Redirigir a la pagina de eliminación con el ID del producto
             window.location.href = "/destroy/" + productID;
         }
     });
