--- a/Pruebas_pintureria_01/templates/productos/pedido.html
+++ b/Pruebas_pintureria_01/templates/productos/pedido.html
@@ -1,4 +1,5 @@
-{% include 'header.html' %}
+{% extends "layout.html" %}
+{% block body %}
 
 <div class="container mt-4">
     <!-- Titulo de la pagina -->
@@ -46,4 +47,4 @@
 
 </div>
 
-{% include 'footer.html' %}
+{% endblock %}
