--- a/Pruebas_pintureria_01/templates/productos/ranking.html
+++ b/Pruebas_pintureria_01/templates/productos/ranking.html
@@ -1,4 +1,5 @@
-{% include 'header.html' %}
+{% extends "layout.html" %}
+{% block body %}
 
 <div class="container mt-4">
     <h2 class="mb-3">Ranking</h2>
@@ -15,7 +16,7 @@
         <button type="submit" class="btn btn-primary">Filtrar</button>
     </form>
 
-    <div class="table-responsive">
+    <div class="table-responsive" style="height: 70vh;">
         <table class="table table-bordered table-hover">
             <thead class="thead-light">
                 <tr>
@@ -45,4 +46,4 @@
     </div>
 </div>
 
-{% include 'footer.html' %}
+{% endblock %}
