--- a/Pruebas_pintureria_01/templates/productos/edit.html
+++ b/Pruebas_pintureria_01/templates/productos/edit.html
@@ -8,8 +8,8 @@
         <div class="card-header">
             Editar producto
         </div>
-        <div class="card-body">
-            <h5 class="card-title">Datos del producto</h5>
+        <div class="card-body" style="display: grid; grid-template-columns: repeat(2,1fr); column-gap: 10px;">
+            <h5 class="card-title" style="grid-column: 1/-1;">Datos del producto</h5>
 
             <div class="form-group">
                 <label for="txtNombre">Nombre</label>
