--- a/Pruebas_pintureria_01/templates/proveedores/nuevo_proveedor.html
+++ b/Pruebas_pintureria_01/templates/proveedores/nuevo_proveedor.html
@@ -3,7 +3,7 @@
 
 <div class="container">
     <h2>Agregar Nuevo Proveedor</h2>
-    <form method="POST" action="/agregar_proveedores">
+    <form method="POST" action="/agregar_proveedor">
         <div class="form-group">
             <label for="nombre">Nombre:</label>
             <input type="text" class="form-control" id="nombre" name="nombre" required>
